@@ -6,6 +6,9 @@ After 1.5.0beta
 
   Bugs Fixed
 
+    - http://www.zope.org/Collectors/cmf/205: When pasting a content item,
+      local roles were not changed to reflect the neew ownership.
+
     - ActionsTool: Removed deprecated support for oldstyle Action Providers.
       If Action Providers don't implement the ActionProvider interface they
       are now ignored.
